<resources>
    <string name="app_name">Todo</string>
    <string name="no_internet">عدم اتصال به اینترنت!</string>
    <string name="no_internet_msg">مراحل عضویت و ورود به تودو نیازمند اتصال اینترنت است.</string>
    <string name="wifi">اینترنت Wi-Fi</string>
    <string name="mobile_data">اینترنت موبایل</string>
    <string name="phone_number">شماره تلفن همراه</string>
    <string name="get_auth_code">دریافت کد احراز هویت</string>
    <string name="create_new_list">ایجاد لیست جدید</string>
    <string name="create">ساختن</string>
    <string name="new_list_name">نام لیست جدید</string>
</resources>
